unpackaged/main/default/objects/bt_stripe__Usage__c/bt_stripe__Usage__c.object-meta.xml
<CustomObject>
    <description>Used by Stripe Billing. This stores and Usage data received from Stripe.</description>
    <label>Usage</label>
    <nameField>
        <displayFormat>US-{000000}</displayFormat>
        <label>Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>