unpackaged/main/default/objects/bt_stripe__Usage__c/fields/bt_stripe__Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Processed_Date__c</fullName>
    <description>The timestamp for the usage event. This timestamp must be within the current billing period of the subscription of the provided Subscription Item.</description>
    <inlineHelpText>The timestamp for the usage event. This timestamp must be within the current billing period of the subscription of the provided Subscription Item.</inlineHelpText>
    <label>Processed Date</label>
    <type>DateTime</type>
</CustomField>