unpackaged/main/default/objects/bt_stripe__Usage__c/fields/bt_stripe__Subscription_Item__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Subscription_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Item</label>
    <referenceTo>bt_stripe__Subscription_Item__c</referenceTo>
    <relationshipLabel>Usages</relationshipLabel>
    <relationshipName>Usages</relationshipName>
    <type>Lookup</type>
</CustomField>