unpackaged/main/default/objects/bt_stripe__Usage__c/fields/bt_stripe__Usage_ID__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Usage_ID__c</fullName>
    <description>The ID of this record from the Payment Gateway.</description>
    <inlineHelpText>The ID of this record from the Payment Gateway.</inlineHelpText>
    <label>Usage ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>